--- a/Makefile.conf
+++ b/Makefile.conf
@@ -128,6 +128,7 @@ HPPFILES = \
 	visitor_selector.hpp \
 	visitor_statement.hpp \
 	visitor_value.hpp \
+	expr_to_calc.hpp \
 	string_utils.hpp \
 	callstack.hpp \
 	environment_cnt.hpp \
@@ -181,6 +182,8 @@ SOURCES = \
 	sel_bogus.cpp \
 	sel_useless.cpp \
 	sel_invisible.cpp \
+	expr_to_calc.cpp \
+	expression.cpp \
 	eval.cpp \
 	randomize.cpp \
 	cssize.cpp \
